--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "bobelectronappv2",
+  "name": "bob-electron",
   "version": "1.0.0",
-  "description": "A simple Electron app",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
+  "description": "",
+  "main": "index.js",
+ "scripts": {
+  "start": "electron .",
+  "pack": "electron-builder --dir",
+  "dist": "electron-builder",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "devDependencies": {
-    "electron": "^latest_version"
+    "electron": "^36.4.0",
+    "electron-builder": "^26.0.12"
   }
 }
